Fixed <body> not covering entire page
This had side effects such as being unable to unfocus windows unless 
clicking on the very top of the page

--- a/juicy-jaguars/Web95/Web95/static/css/main.css
+++ b/juicy-jaguars/Web95/Web95/static/css/main.css
@@ -10,6 +10,7 @@
 body {
     padding-bottom: 0;
     overflow: hidden;
+    height: 100vh;
 }
 
 .taskbar {
